--- a/config.yml
+++ b/config.yml
@@ -18,7 +18,7 @@ data:
 lgb:
   num_iterations: 100000
   objective: regression
-  metric: rmse
+  metric: mae
   boosting: gbdt
   early_stopping_round: 500
   learning_rate: 0.005
@@ -28,8 +28,8 @@ lgb:
   bagging_freq: 1
 
 cat:
-  eval_metric: RMSE
-  loss_function: RMSE
+  eval_metric: MAE
+  loss_function: MAE
   iterations: 30000
   verbose: 1000
   early_stopping_rounds: 500
