--- a/config.yml
+++ b/config.yml
@@ -12,8 +12,9 @@ exp:
 data:
   seed: 42
   n_splits: 5
-  vec_max_features: 50000
-  vec_n_components: 50
+  sampling: 0.5
+  vec_max_features: 60000
+  vec_n_components: 200
 
 lgb:
   num_iterations: 100000
